# Vanik

./: BACKLOG.md  CONTEXT.md  README.md  complete_grns.py  create_final_sales_orders.py  create_grns.py  create_grns_fast.py  create_po_entries.py  create_purchase_orders.py  create_sales_orders.py  create_smart_sales_orders.py  create_targeted_sales_orders.py  database_schema_documentation.md  package-lock.json  package.json  populate_data.py  pyproject.toml  release_all_committed_stock.py  release_committed_stock.py  replit.md  start-dev.sh  start_backend.sh  test-token.html
attached_assets/: Pasted-Here-is-a-comprehensive-prompt-articulating-our-entire-discussion-designed-to-be-given-to-an-AI-age-1751092131940_1751092131940.txt  Pasted-I-see-following-issues-1-In-Master-Data-Processors-page-can-you-remove-the-Add-processor-bu-1751184080769_1751184080769.txt  Pasted-Instruction-You-are-an-AI-coding-assistant-helping-me-prepare-a-context-file-for-GitHub-Copilot-and-1755947813986_1755947813986.txt  Pasted-Now-let-s-work-on-sales-and-processing-I-want-to-completely-revamp-the-sales-and-processing-Inste-1752330771763_1752330771764.txt
backend/: .env  auth_utils.py  base_controllers.py  business_logic_controllers.py  database_storage.py  simple_server.py  specialized_controllers.py
backend/authentication/: models.py
backend/inventory_backend/: settings.py  urls.py
backend/master_data/: models.py
frontend/: vite.config.ts
frontend/client/src/: App.tsx  index.css
frontend/client/src/components/: ErrorBoundary.tsx  LoadingStates.tsx  (+1 more)
server/: index.ts
(+26 files in other folders)
